--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
         </div>
         
     </header>
-    
+    <div class="hero-section">
+        <div class="hero-msg">
+            <p></p>
+        </div>
+    </div>
 </body>
 </html>
