--- a/index.html
+++ b/index.html
@@ -67,10 +67,15 @@
         </div>
         
     </header>
-    <div class="hero-section">
-        <div class="hero-msg">
-            <p></p>
+    <div class="hero-section"></div>
+    <div class="content">
+        <div class="box1 box">
+            <h2>HEALTH & PERSONAL CARE</h2>
+            <div class="box-image"></div>
         </div>
+        <div class="box2 box"></div>
+        <div class="box3 box"></div>
+        <div class="box4 box"></div>
     </div>
 </body>
 </html>
